fixed wishlist on small sizes, view cart button list and desc

--- a/wp-content/themes/acme-fx/style.css
+++ b/wp-content/themes/acme-fx/style.css
@@ -2320,6 +2320,18 @@ a.button.checkout.wc-forward {
 section.up-sells.upsells.products + section.related.products {
     margin-top: 40px;
 }
+.wl-list-pop.woocommerce dd a {
+	color: #5ba5a5;
+}
+.wl-list-pop.woocommerce dd a:hover {
+	color: #80E0D9;
+}
+.wl-tab-wrap .wl-panel.panel button.button {
+	padding: 12px 10px;
+}
+#wl-wrapper .woocommerce-message .button {
+    margin-left: 10px;
+}
 
 
 /** th-- Archive page descriptions ******************************/
@@ -4597,6 +4609,108 @@ body .fbx-inner {
 		font-size: 18px;
 	}
 
+
+
+
+
+
+
+
+.woocommerce table.shop_table.wl-table thead,
+.woocommerce-page table.shop_table.wl-table thead {
+	display:none;
+}
+
+.woocommerce table.shop_table.wl-table tbody tr:first-child td:first-child,
+.woocommerce-page table.shop_table.wl-table tbody tr:first-child td:first-child {
+	border-top:0;
+}
+
+.woocommerce table.shop_table.wl-table tbody th,
+.woocommerce-page table.shop_table.wl-table tbody th {
+	display:none;
+}
+
+.woocommerce table.shop_table.wl-table tr,
+.woocommerce-page table.shop_table.wl-table tr {
+	display:block;
+}
+
+.woocommerce table.shop_table.wl-table tr td,
+.woocommerce-page table.shop_table.wl-table tr td {
+	display:block;text-align:right!important;
+}
+
+.woocommerce table.shop_table.wl-table tr td.order-actions,
+.woocommerce-page table.shop_table.wl-table tr td.order-actions {
+	text-align:left!important;
+}
+
+.woocommerce table.shop_table.wl-table tr td.product-name::before,
+.woocommerce-page table.shop_table.wl-table tr td.product-name::before {
+	content:"Product: ";font-weight:700;float:left;
+}
+.woocommerce table.shop_table.wl-table tr td.product-price::before,
+.woocommerce-page table.shop_table.wl-table tr td.product-price::before {
+	content:"Price: ";font-weight:700;float:left;
+}
+.woocommerce table.shop_table.wl-table tr td.product-quantity::before,
+.woocommerce-page table.shop_table.wl-table tr td.product-quantity::before {
+	content:"Quantity: ";font-weight:700;float:left;
+}
+
+
+.woocommerce table.shop_table.wl-table tr td.actions::before,
+.woocommerce table.shop_table.wl-table tr td.product-remove::before,
+.woocommerce-page table.shop_table.wl-table tr td.actions::before,
+.woocommerce-page table.shop_table.wl-table tr td.product-remove::before {
+	display:none;
+}
+
+#wl-wrapper .wl-table .wl-date-added, #wl-wrapper .wl-table .product-quantity, #wl-wrapper .wl-table .product-price, #wl-wrapper .wl-table .product-purchase, #wl-wrapper .wl-privacy-col {
+    text-align: right !important;
+}
+
+.woocommerce #content table.cart.wl-table .product-thumbnail,
+.woocommerce table.cart.wl-table .product-thumbnail,
+.woocommerce-page #content table.cart.wl-table .product-thumbnail,
+.woocommerce-page table.cart.wl-table .product-thumbnail {
+    display: none;
+}
+
+.wl-tab-wrap .wl-panel.panel button.button {
+    padding: 12px 10px;
+    font-size: 12px;
+}
+#wl-wrapper .wl-table .check-column, #wl-wrapper .wl-table .product-remove {
+    text-align: left !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 @media only screen and (max-width: 800px) { 
 	.home #wp-custom-header video,
@@ -4849,6 +4963,7 @@ body .fbx-inner {
 	.fx-main .site-inner {
 	    padding: 0;
 	}
+
 }
 
 
@@ -4957,6 +5072,13 @@ body .fbx-inner {
 	}
 	.woocommerce button.button.add_to_cart_button {
 	    margin-bottom: 10px;
+	}
+	#wl-wrapper .woocommerce-message .button {
+		margin-bottom: 10px;
+	    display: block;
+	    float: none;
+	    width: 175px;
+	    margin-left: 0;
 	}
 
 }
